# vsysPart2

./: tasks.txt
vsys_email_client/: CMakeLists.txt  Functions.cpp  Functions.h  Makefile  client  main.cpp  protocol.cpp  protocol.h
vsys_email_client/client.dSYM/Contents/Resources/DWARF/: client
vsys_email_server/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  FileHandler.cpp  FileHandler.h  Functions.cpp  Functions.h  Makefile  MessageType.h  main.cpp  server
vsys_email_server/ServerData/Astrid/: 0.txt  1.txt
vsys_email_server/ServerData/Max/: 0.txt  1.txt
vsys_email_server/ServerData/Nina/: 0.txt  1.txt
vsys_email_server/ServerData/Rolli/: 0.txt  1.txt  2.txt
vsys_email_server/nbproject/: configurations.xml  project.xml
vsys_email_server/nbproject/private/: Default.properties  configurations.xml  private.xml
vsys_email_server/server.dSYM/Contents/Resources/DWARF/: server
